# Project-Atheria

./: .gitignore  CMakeLists.txt  README.md
src/: ast.hpp  ast.hpp.txt  ast_printer.cpp  ast_printer.hpp  codegen.cpp  codegen.hpp  lexer.cpp  lexer.hpp  main.athx  main.cpp  parser.cpp  parser.cpp.txt  parser.hpp  parser.hpp.txt  token.cpp  token.hpp
syntax-clion/athx/: Atheria.tmLanguage
